Add lint checking via CoffeeLint

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "coffee-script": "*",
+    "coffeelint": "*",
     "colors": "*",
     "wrench": "*"
   }
