Initial support for AMD -- still missing advanced compilation

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "coffee-script": "*",
     "coffeelint": "*",
     "colors": "*",
-    "wrench": "*"
+    "wrench": "*",
+    "requirejs": "*"
   }
 }
