Start refactoring cakefile

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "coffeelint": "*",
     "colors": "*",
     "wrench": "*",
-    "requirejs": "*"
+    "requirejs": "*",
+    "glob": "~3"
   }
 }
